# back-end-boilerplate

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compile-for-dev-server.sh  docker-compose.yml  dockerfile-gen.sh  restart-dev-server.sh
.github/workflows/: clippy.yml  fmt.yml
cargo_workspace/: Cargo.toml
cargo_workspace/db_client/: Cargo.toml
cargo_workspace/db_client/src/: config.rs  context.rs  lib.rs
cargo_workspace/migrations/: 20221214151701_example.sql  20221214151703_example2.sql
cargo_workspace/server/: Cargo.toml
cargo_workspace/server/src/: main.rs
cargo_workspace/server/src/filters/: mod.rs
db_client/: Cargo.toml
db_client/src/: context.rs  lib.rs
server/: Cargo.toml
server/src/: main.rs
server/src/filters/app_api/: context.rs  mod.rs  mutation.rs  query.rs
