[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
db_client = {path = "../db_client"}
env_logger = "0.9"
juniper = "0.15.7"
juniper_warp = "0.7"
openssl = "0.10" # needed to compile with diesel for musl
shrinkwraprs = "0.3.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
